# Karate-Gym-Tracker

./: README.md
diagrams/: Activity.md  Class.md  Component and Deployment.md  Sequence.md  Use Case.md
docs/: SRS.md  mokaps.bmpr
docs/diagrams/: State.md  Use Case.md
docs/tests/: testPlan.md  testResult.md
src/: LICENSE  settings.gradle.kts
src/app/: build.gradle.kts  local.properties
src/app/src/androidTest/java/com/example/kgt/: ExampleInstrumentedTest.kt
src/app/src/main/: AndroidManifest.xml
src/app/src/main/java/com/example/kgt/: MainActivity.kt
src/app/src/main/java/com/example/kgt/ui/theme/: Color.kt  Theme.kt  Type.kt
src/app/src/main/java/com/example/kgt/ui/theme/Screens/: LoginScreen.kt
src/app/src/main/java/com/example/src/: MainActivity.kt
src/app/src/main/java/com/example/src/ui/theme/: Color.kt  DataBAse.kt  MainNavGraph.kt  Theme.kt  Type.kt
src/app/src/main/java/com/example/src/ui/theme/cpp/: CMakeLists.txt  native-lib.c
src/app/src/main/java/com/example/src/ui/theme/dataBases/: DataBaseGum.kt  DataBaseUser.kt
src/app/src/main/java/com/example/src/ui/theme/screens/: EditUserProfileScreen.kt  GumScreen.kt  LoginScreen.kt  MainScreen.kt  RegisterScreen.kt  UserProfileScreen.kt
src/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/app/src/test/java/com/example/kgt/: ExampleUnitTest.kt
src/gradle/: libs.versions.toml
src/gradle/wrapper/: gradle-wrapper.properties
